fix intro logo position on mobile

--- a/css/style-home.css
+++ b/css/style-home.css
@@ -391,7 +391,7 @@ button.contactButton::before, button.contactButton::after {
   #introLogo{
     width: 50%;
     position: absolute;
-    top: 40%;
+    top: 42%;
     left: 50%;
   }
 }
